fix: hero content too big for some small screens.

--- a/src/styles/hero.module.css
+++ b/src/styles/hero.module.css
@@ -26,7 +26,6 @@
   bottom: -5rem;
   left: 2rem;
   background-color: #fff;
-  width: 100%;
   min-width: 24rem;
   border-radius: 1.25rem;
   padding: 2.375rem;
@@ -84,3 +83,21 @@
   margin-left: -0.75rem;
 }
 
+@media  screen and (max-width: 448px) {
+  .hero{
+    min-width: 20rem;
+    height: 470px;
+  }
+  .hero_stats{
+    min-width: 20.25rem;
+    left: 1.625rem;
+    bottom: -3.875rem;
+    padding: 1.5rem 1.5rem;
+  }
+  .hero_stats_row2_recentbids_bids_value{
+    font-size: 0.625rem;
+    border-radius: 16% 0 0 16%;
+    padding-left: 1rem;
+    margin-left: -0.875rem;
+  }
+}
