--- a/src/styles/navMobile.module.css
+++ b/src/styles/navMobile.module.css
@@ -7,7 +7,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 2rem;
-    padding-top: 2rem;
+    padding-top: 1rem;
     margin: auto;
     border-bottom: 1px solid #6b728050;
     padding-bottom: 1rem;
@@ -57,16 +57,16 @@
 }
 .nav_mobile_content{
     font-family: "Space Grotesk", sans-serif;
-    display: block;
+    /* display: block; */
     position: fixed;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     z-index: 20;
     background-color: #ffffff;
     color: #151F37;
     padding: 0 2rem;
     padding-top: 1rem;
-    margin-top: 2.5rem;
+    margin-top: 1.5rem;
 }
 .nav_mobile_search_container{
     position: relative;
